--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js",
-    "watch":"webpack -d --watch",
+    "start": "node server.js",
+    "watch": "webpack -d --watch",
     "postinstall": "webpack -p --config webpack.prod.config.js",
     "showerrors": "webpack --progress --color --watch --display-error-details",
     "showinfo": "webpack --display-modules --display-reasons",
@@ -16,10 +16,12 @@
     "type": "git",
     "url": "git+https://github.com/jonniebigodes/freecodecampdynamicwebapps.git"
   },
-  "keywords": ["heroku",
+  "keywords": [
+    "heroku",
     "api",
     "freecodecamp",
-    "challenges"],
+    "challenges"
+  ],
   "author": "jonniebigodes",
   "license": "MIT",
   "bugs": {
@@ -27,22 +29,30 @@
   },
   "homepage": "https://github.com/jonniebigodes/freecodecampdynamicwebapps#readme",
   "dependencies": {
+    "async": "^2.1.4",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "bootstrap": "^3.3.7",
     "css-loader": "0.23.1",
+    "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "mongodb": "^2.2.21",
     "node-sass": "^3.4.2",
     "react": "^15.0.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.0.1",
     "react-router": "^3.0.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "unirest": "^0.5.1",
     "webpack": "^1.12.14"
   },
   "devDependencies": {
+    "file-loader": "^0.10.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.10.0"
