--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "webpack": "^1.12.14"
   },
   "devDependencies": {
+    "css-loader": "^0.23.1",
     "file-loader": "^0.10.0",
-    "url-loader": "^0.5.7",
+    "sass-loader": "^3.2.3",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.10.0"
