--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "css-loader": "0.23.1",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
+    "file-loader": "^0.10.0",
     "mongodb": "^2.2.21",
     "node-sass": "^3.4.2",
     "react": "^15.0.1",
@@ -47,6 +48,7 @@
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "unirest": "^0.5.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.14"
   },
   "devDependencies": {
