--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.4.0",
     "css-loader": "0.23.1",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
@@ -43,6 +44,7 @@
     "node-sass": "^3.4.2",
     "react": "^15.0.1",
     "react-bootstrap": "^0.30.7",
+    "react-chartjs-2": "^2.0.0",
     "react-dom": "^15.0.1",
     "react-router": "^3.0.0",
     "sass-loader": "^3.2.0",
