changed the readme and started the implementation of the votting app still not working as expected. added some mock data implementation just to test

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,12 @@ dist/bundle.js
 *.env
 *.dev
 .DS_Store
-
+stats.json
+*.woff
+*.woff2
+*.eot
+*.ttf
+*.svg
 # Docker
 Dockerfile
 docker-compose.yml
