--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "sass-loader": "^3.2.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
+    "webpack-cleanup-plugin": "^0.4.2",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.10.0"
