--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/jonniebigodes/freecodecampdynamicwebapps#readme",
   "dependencies": {
+    "animate.css": "^3.5.2",
     "async": "^2.1.4",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
@@ -41,9 +42,15 @@
     "css-loader": "0.23.1",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
+    "express-session": "^1.15.3",
     "file-loader": "^0.10.0",
+    "material-design-icons": "^3.0.1",
     "mongodb": "^2.2.24",
+    "mongoose": "^4.11.1",
+    "muicss": "^0.9.15",
     "node-sass": "^3.4.2",
+    "passport": "^0.3.2",
+    "passport-twitter": "^1.0.4",
     "react": "^15.0.1",
     "react-bootstrap": "^0.30.7",
     "react-chartjs-2": "^2.0.0",
@@ -52,9 +59,9 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-promise-middleware": "^4.0.0",
+    "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.0",
-    "socket.io": "^1.7.2",
-    "socket.io-react": "^1.1.2",
     "style-loader": "^0.13.1",
     "unirest": "^0.5.1",
     "url-loader": "^0.5.7",
@@ -62,8 +69,16 @@
     "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-2": "^6.11.0",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.23.1",
+    "eslint": "^3.19.0",
+    "eslint-config-defaults": "^9.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "file-loader": "^0.10.0",
     "redux-devtools": "^3.3.2",
     "sass-loader": "^3.2.3",
