--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "express-session": "^1.15.3",
     "file-loader": "^0.10.0",
     "material-design-icons": "^3.0.1",
+    "material-ui": "^0.18.7",
     "mongodb": "^2.2.24",
     "mongoose": "^4.11.1",
-    "muicss": "^0.9.15",
     "node-sass": "^3.4.2",
     "passport": "^0.3.2",
     "passport-twitter": "^1.0.4",
+    "prop-types": "^15.5.10",
     "react": "^15.0.1",
     "react-bootstrap": "^0.30.7",
     "react-chartjs-2": "^2.0.0",
@@ -58,6 +59,7 @@
     "react-dom": "^15.0.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-promise-middleware": "^4.0.0",
     "redux-thunk": "^2.1.0",
