created bundle.js to test if heroku eats it up

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "webpack -d --watch",
+    "build": "webpack --config webpack.prod.config.js -p --progress --colors",
     "postinstall": "webpack -p --config webpack.prod.config.js",
     "showerrors": "webpack --progress --color --watch --display-error-details",
     "showinfo": "webpack --display-modules --display-reasons",
