reworked with material-ui the stocks app and made some changes on the components namely footer and added some guard methods on stocks app

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ node_modules/
 .vscode/
 
 #buildfiles
-#dist/bundle.js
+dist/bundle.js
 
 # Local development
 *.env
@@ -15,7 +15,7 @@ stats.json
 *.eot
 *.ttf
 *.svg
-
+*.old
 # Docker
 Dockerfile
 docker-compose.yml
