added babel to server and started the nightlife challenge. Deleted the headers on diferent challenges and one header component to be reused

--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "debugserver": "nodemon server.js --exec babel-node",
+    "start": "node ./lib/server.bundle.js",
     "watch": "webpack -d --watch",
-    "build": "webpack --config webpack.prod.config.js -p --progress --colors",
+    "buildserverdeps": "babel ./src/server/ --out-dir ./lib --presets minify",
+    "buildserver": "babel server.js -o ./lib/server.bundle.js --presets minify",
+    "buildproject": "webpack --config webpack.prod.config.js -p --progress --colors",
+    "build": "npm run buildserverdeps && npm run buildserver",
     "postinstall": "webpack -p --config webpack.prod.config.js",
     "showerrors": "webpack --progress --color --watch --display-error-details",
     "showinfo": "webpack --display-modules --display-reasons",
@@ -38,6 +42,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "chart.js": "^2.4.0",
     "css-loader": "0.23.1",
@@ -48,9 +53,9 @@
     "material-design-icons": "^3.0.1",
     "material-ui": "^0.18.7",
     "mongodb": "^2.2.24",
-    "mongoose": "^4.11.1",
     "node-sass": "^3.4.2",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "prop-types": "^15.5.10",
     "react": "^15.0.1",
@@ -69,20 +74,25 @@
     "unirest": "^0.5.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
-    "whatwg-fetch": "^2.0.2"
+    "whatwg-fetch": "^2.0.2",
+    "yelp-fusion": "^1.0.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.1",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-minify": "^0.2.0",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-2": "^6.11.0",
+    "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.23.1",
     "eslint": "^3.19.0",
     "eslint-config-defaults": "^9.0.0",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^6.10.3",
     "file-loader": "^0.10.0",
+    "nodemon": "^1.11.0",
     "redux-devtools": "^3.3.2",
     "sass-loader": "^3.2.3",
     "style-loader": "^0.13.1",
