corrected some stuff on the server and night challenges

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "debugserver": "nodemon server.js --exec babel-node",
     "start": "node ./lib/server.bundle.js",
     "watch": "webpack -d --watch",
-    "buildserverdeps": "babel ./src/server/ --out-dir ./lib --presets minify",
-    "buildserver": "babel server.js -o ./lib/server.bundle.js --presets minify",
+    "buildserverdeps": "babel ./src/server/ --out-dir ./dist --presets minify",
+    "buildserver": "babel server.js -o ./dist/server.bundle.js --presets minify",
     "buildproject": "webpack --config webpack.prod.config.js -p --progress --colors",
     "build": "npm run buildserverdeps && npm run buildserver",
     "postinstall": "webpack -p --config webpack.prod.config.js",
