trying to solve one more presets problem and one eslint problem...

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
         "react"
     ],
     "rules": {
-
+        "import/no-unresolved": 0,
         "quotes": 0,
         "no-console": 1,
         "no-debugger": 1,
