changed server to a routes approach, added routes.js book challenge done started out the api for polls challenge, reworked the dbfactory.js for some methods needed for the book challenge

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules/
-*npm-debug.log
+*.npm-debug.log
 .vscode/
 
 #buildfiles
-dist/bundle.js
+#dist/bundle.js
 errors.json
 # Local development
 *.env
