--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "freecodecampdynamicwebapps",
   "version": "1.0.0",
@@ -7,12 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "debugserver": "nodemon server.js --exec babel-node",
-    "start": "node ./dist/server.bundle.js",
+    "start": "node ./lib/server.bundle.js",
     "watch": "webpack -d --watch",
-    "buildserverdeps": "babel ./src/server/ --out-dir ./dist --presets minify",
-    "buildserver": "babel server.js -o ./dist/server.bundle.js --presets minify",
+    "buildcontrollers":"babel ./controllers/ --out-dir ./lib --presets minify",
+    "buildserverdeps": "babel ./src/server/ --out-dir ./lib --presets minify",
+    "buildserver": "babel server.js -o ./lib/server.bundle.js --presets minify",
+    "buildroutes":"babel routes.js -o ./lib/routes.js --presets minify",
     "buildproject": "webpack --config webpack.prod.config.js -p --progress --colors",
-    "build": "npm run buildserverdeps && npm run buildserver",
+    "build": "npm run buildserverdeps && npm run buildserver && npm run buildroutes && npm run buildcontrollers && npm run buildproject",
     "postinstall": "webpack -p --config webpack.prod.config.js",
     "showerrors": "webpack --progress --color --watch --display-error-details",
     "showinfo": "webpack --display-modules --display-reasons",
@@ -42,9 +43,9 @@
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-minify": "^0.2.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-minify": "^0.2.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
@@ -74,6 +75,7 @@
     "redux-promise-middleware": "^4.0.0",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.0",
+    "sendinblue-api": "^1.0.8",
     "style-loader": "^0.13.1",
     "unirest": "^0.5.1",
     "url-loader": "^0.5.7",
