changed the variable cause the night life item was not working properly

--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,18 @@ node_modules/
 .vscode/
 
 #buildfiles
-#dist/bundle.js
+dist/bundle.js
 errors.json
 # Local development
 *.env
 *.dev
 .DS_Store
 stats.json
-#*.woff
-#*.woff2
-#*.eot
-#*.ttf
-#*.svg
+*.woff
+*.woff2
+*.eot
+*.ttf
+*.svg
 *.old
 queries.json
 # Docker
