started the stocks challenge, corrected the error of the bundle not being found and optimized some code around

--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "debugserver": "nodemon server.js --exec babel-node",
     "start": "node ./lib/server.bundle.js",
+    "startproduction": "SET BLUEAPIKEY=FEaPD8ZQn5pcGdyR && SET YELP_CONSUMER_SECRET=5vJ07g429ZbKf2Dp4BGWiwqPeX7l1pYmJQENjUZ3S3GKBXTVPvE2CjxZXj30cGGJ && SET PROD_MONGODB=mongodb://freecodecampuser:freecodecampuserpwd@ds123930.mlab.com:23930/freecodecamppdyndb && SET QUANDL_KEY=cSvJsaQka3qDMkMrfu24 && SET YELP_CONSUMER_KEY=nZfSn5xMUy6vgyPXeuEeZg && SET SESSION_HASH=B3DC3CB59DBCDF884D8FB93C9136E7F416299E7431DC669258EEC144F2CC4833 && cross-env NODE_ENV=production npm start",
     "watch": "webpack -d --watch",
-    "buildcontrollers":"babel ./controllers/ --out-dir ./lib --presets minify",
+    "builddev":"webpack --config webpack.config.js --progress --colors",
+    "buildcontrollers": "babel ./controllers/ --out-dir ./lib --presets minify",
     "buildserverdeps": "babel ./src/server/ --out-dir ./lib --presets minify",
     "buildserver": "babel server.js -o ./lib/server.bundle.js --presets minify",
-    "buildroutes":"babel routes.js -o ./lib/routes.js --presets minify",
-    "buildproject": "webpack --config webpack.prod.config.js -p --progress --colors",
-    "build": "npm run buildserverdeps && npm run buildserver && npm run buildroutes && npm run buildcontrollers && npm run buildproject",
-    "postinstall": "webpack -p --config webpack.prod.config.js",
+    "buildroutes": "babel routes.js -o ./lib/routes.js --presets minify",
+    "postinstall": "npm run build && webpack -p --config webpack.prod.config.js --progress --colors",
+    "build": "npm run buildserverdeps && npm run buildserver && npm run buildroutes && npm run buildcontrollers",
     "showerrors": "webpack --progress --color --watch --display-error-details",
     "showinfo": "webpack --display-modules --display-reasons",
     "showinfofile": "webpack --json>stats.json",
@@ -88,16 +89,13 @@
     "babel-eslint": "^7.2.1",
     "babel-loader": "^6.2.4",
     "clean-webpack-plugin": "^0.1.15",
-    "css-loader": "^0.23.1",
+    "cross-env": "^5.0.5",
     "eslint": "^3.19.0",
     "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^6.10.3",
-    "file-loader": "^0.10.0",
     "nodemon": "^1.11.0",
     "redux-devtools": "^3.3.2",
-    "sass-loader": "^3.2.3",
-    "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
