implemented voting challenge no skining, added a passportconfig file to hold the middleware config,redid some stuff on the night app challenge

--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "debugserver": "nodemon server.js --exec babel-node",
     "start": "node ./lib/server.bundle.js",
-    "startproduction": "SET BLUEAPIKEY=FEaPD8ZQn5pcGdyR && SET YELP_CONSUMER_SECRET=5vJ07g429ZbKf2Dp4BGWiwqPeX7l1pYmJQENjUZ3S3GKBXTVPvE2CjxZXj30cGGJ && SET PROD_MONGODB=mongodb://freecodecampuser:freecodecampuserpwd@ds123930.mlab.com:23930/freecodecamppdyndb && SET QUANDL_KEY=cSvJsaQka3qDMkMrfu24 && SET YELP_CONSUMER_KEY=nZfSn5xMUy6vgyPXeuEeZg && SET SESSION_HASH=B3DC3CB59DBCDF884D8FB93C9136E7F416299E7431DC669258EEC144F2CC4833 && cross-env NODE_ENV=production npm start",
     "watch": "webpack -d --watch",
-    "builddev":"webpack --config webpack.config.js --progress --colors",
+    "builddev": "webpack --config webpack.config.js --progress --colors",
     "buildcontrollers": "babel ./controllers/ --out-dir ./lib --presets minify",
     "buildserverdeps": "babel ./src/server/ --out-dir ./lib --presets minify",
     "buildserver": "babel server.js -o ./lib/server.bundle.js --presets minify",
     "buildroutes": "babel routes.js -o ./lib/routes.js --presets minify",
+    "buildpass": "babel passportconfig.js -o ./lib/passportconfig.js --presets minify",
     "postinstall": "npm run build && webpack -p --config webpack.prod.config.js --progress --colors",
-    "build": "npm run buildserverdeps && npm run buildserver && npm run buildroutes && npm run buildcontrollers",
+    "build": "npm run buildserverdeps && npm run buildserver && npm run buildroutes && npm run buildcontrollers && npm run buildpass",
     "showerrors": "webpack --progress --color --watch --display-error-details",
     "showinfo": "webpack --display-modules --display-reasons",
     "showinfofile": "webpack --json>stats.json",
@@ -59,9 +59,11 @@
     "file-loader": "^0.10.0",
     "material-design-icons": "^3.0.1",
     "material-ui": "^0.18.7",
+    "moment": "^2.19.0",
     "mongodb": "^2.2.24",
     "node-sass": "^3.4.2",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "prop-types": "^15.5.10",
@@ -79,6 +81,7 @@
     "sass-loader": "^3.2.0",
     "sendinblue-api": "^1.0.8",
     "style-loader": "^0.13.1",
+    "twitter": "^1.7.1",
     "unirest": "^0.5.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
