--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "moment": "^2.19.0",
     "mongodb": "^2.2.24",
     "node-sass": "^3.4.2",
+    "normalizr": "^3.2.4",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
