--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "watch": "webpack -d --watch",
     "builddev": "webpack --config webpack.config.js --progress --colors",
     "buildcontrollers": "babel ./controllers/ --out-dir ./lib --presets minify",
+    "buildlogger":"babel logger.js -o ./lib/logger.js --presets minify",
     "buildserverdeps": "babel ./src/server/ --out-dir ./lib --presets minify",
     "buildserver": "babel server.js -o ./lib/server.bundle.js --presets minify",
     "buildroutes": "babel routes.js -o ./lib/routes.js --presets minify",
     "buildpass": "babel passportconfig.js -o ./lib/passportconfig.js --presets minify",
     "postinstall": "npm run build && webpack -p --config webpack.prod.config.js --progress --colors",
-    "build": "npm run buildserverdeps && npm run buildserver && npm run buildroutes && npm run buildcontrollers && npm run buildpass",
+    "build": "npm run buildserverdeps && npm run buildserver && npm run buildroutes && npm run buildcontrollers && npm run buildpass && npm run buildlogger",
     "showerrors": "webpack --progress --color --watch --display-error-details",
     "showinfo": "webpack --display-modules --display-reasons",
     "showinfofile": "webpack --json>stats.json",
@@ -44,6 +45,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-minify": "^0.2.0",
     "babel-preset-react": "^6.5.0",
@@ -57,8 +59,7 @@
     "express": "^4.14.0",
     "express-session": "^1.15.3",
     "file-loader": "^0.10.0",
-    "material-design-icons": "^3.0.1",
-    "material-ui": "^0.18.7",
+    "material-ui": "^0.20.0",
     "moment": "^2.19.0",
     "mongodb": "^2.2.24",
     "node-sass": "^3.4.2",
@@ -69,12 +70,11 @@
     "passport-twitter": "^1.0.4",
     "prop-types": "^15.5.10",
     "react": "^15.0.1",
-    "react-bootstrap": "^0.30.7",
+    "react-bootstrap": "^0.32.0",
     "react-chartjs-2": "^2.0.0",
     "react-dom": "^15.0.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.0",
-    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-promise-middleware": "^4.0.0",
     "redux-thunk": "^2.1.0",
@@ -86,6 +86,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "whatwg-fetch": "^2.0.2",
+    "winston": "^2.4.0",
     "yelp-fusion": "^1.0.3"
   },
   "devDependencies": {
